added comments still need to add more and tidy code up
